--- a/1.semester/JavaFX/Testing1000/src/main/resources/org/example/testing1000/hello-view.fxml
+++ b/1.semester/JavaFX/Testing1000/src/main/resources/org/example/testing1000/hello-view.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.testing1000.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Circle?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.testing1000.HelloController">
+   <center>
+      <Circle fx:id="myCircle" fill="DODGERBLUE" radius="100.0" stroke="BLACK" strokeType="INSIDE" BorderPane.alignment="CENTER" />
+   </center>
+   <right>
+      <Button mnemonicParsing="false" onAction="#decrease" text="DECREASE" BorderPane.alignment="CENTER" />
+   </right>
+   <left>
+      <Button mnemonicParsing="false" onAction="#increase" text="INCREASE" BorderPane.alignment="CENTER" />
+   </left>
+</BorderPane>
