--- a/1.semester/JavaFX/ImageViewFinal/src/main/resources/org/example/imageviewfinal/hello-view.fxml
+++ b/1.semester/JavaFX/ImageViewFinal/src/main/resources/org/example/imageviewfinal/hello-view.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.imageviewfinal.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.imageviewfinal.HelloController">
+   <children>
+      <Button fx:id="myButton" layoutX="273.0" layoutY="305.0" mnemonicParsing="false" onAction="#displayImage" text="Button" />
+      <ImageView fx:id="myImageView" fitHeight="186.0" fitWidth="271.0" layoutX="230.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@IMG_6927.jpeg" />
+         </image>
+      </ImageView>
+   </children>
+</AnchorPane>
